// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getTOC with custom heading levels 1`] = `
Array [
  Object {
    "children": Array [
      Object {
        "children": Array [],
        "content": "foo",
        "hashLink": "foo-1",
        "rawContent": "foo",
      },
      Object {
        "children": Array [],
        "content": "foo 1",
        "hashLink": "foo-1-1",
        "rawContent": "foo 1",
      },
    ],
    "content": "foo",
    "hashLink": "foo",
    "rawContent": "foo",
  },
  Object {
    "children": Array [],
    "content": "foo 1",
    "hashLink": "foo-1-2",
    "rawContent": "foo 1",
  },
  Object {
    "children": Array [
      Object {
        "children": Array [],
        "content": "foo",
        "hashLink": "foo-3",
        "rawContent": "foo",
      },
      Object {
        "children": Array [],
        "content": "4th level headings",
        "hashLink": "4th-level-headings",
        "rawContent": "4th level headings",
      },
    ],
    "content": "foo 2",
    "hashLink": "foo-2",
    "rawContent": "foo 2",
  },
  Object {
    "children": Array [
      Object {
        "children": Array [],
        "content": "bar",
        "hashLink": "bar-1",
        "rawContent": "bar",
      },
      Object {
        "children": Array [],
        "content": "bar",
        "hashLink": "bar-2",
        "rawContent": "bar",
      },
      Object {
        "children": Array [],
        "content": "<code>bar</code>",
        "hashLink": "bar-3",
        "rawContent": "\`bar\`",
      },
      Object {
        "children": Array [],
        "content": "<code>bar</code>",
        "hashLink": "bar-4",
        "rawContent": "\`bar\`",
      },
    ],
    "content": "bar",
    "hashLink": "bar",
    "rawContent": "bar",
  },
  Object {
    "children": Array [
      Object {
        "children": Array [],
        "content": "bar",
        "hashLink": "bar-6",
        "rawContent": "bar",
      },
      Object {
        "children": Array [],
        "content": "bar",
        "hashLink": "bar-7",
        "rawContent": "bar",
      },
    ],
    "content": "bar",
    "hashLink": "bar-5",
    "rawContent": "bar",
  },
  Object {
    "children": Array [],
    "content": "bar",
    "hashLink": "bar-8",
    "rawContent": "bar",
  },
]
`;

exports[`getTOC with defaults 1`] = `
Array [
  Object {
    "children": Array [
      Object {
        "children": Array [],
        "content": "foo",
        "hashLink": "foo-1",
        "rawContent": "foo",
      },
      Object {
        "children": Array [],
        "content": "foo 1",
        "hashLink": "foo-1-1",
        "rawContent": "foo 1",
      },
    ],
    "content": "foo",
    "hashLink": "foo",
    "rawContent": "foo",
  },
  Object {
    "children": Array [],
    "content": "foo 1",
    "hashLink": "foo-1-2",
    "rawContent": "foo 1",
  },
  Object {
    "children": Array [
      Object {
        "children": Array [],
        "content": "foo",
        "hashLink": "foo-3",
        "rawContent": "foo",
      },
    ],
    "content": "foo 2",
    "hashLink": "foo-2",
    "rawContent": "foo 2",
  },
  Object {
    "children": Array [
      Object {
        "children": Array [],
        "content": "bar",
        "hashLink": "bar-1",
        "rawContent": "bar",
      },
      Object {
        "children": Array [],
        "content": "<code>bar</code>",
        "hashLink": "bar-3",
        "rawContent": "\`bar\`",
      },
    ],
    "content": "bar",
    "hashLink": "bar",
    "rawContent": "bar",
  },
  Object {
    "children": Array [
      Object {
        "children": Array [],
        "content": "bar",
        "hashLink": "bar-6",
        "rawContent": "bar",
      },
    ],
    "content": "bar",
    "hashLink": "bar-5",
    "rawContent": "bar",
  },
  Object {
    "children": Array [],
    "content": "bar",
    "hashLink": "bar-8",
    "rawContent": "bar",
  },
]
`;

exports[`insertTOC AUTOGENERATED_TABLE_OF_CONTENTS does not exist 1`] = `
"## foo
### foo
### foo 1
## foo 1
## foo 2
### foo
#### 4th level headings
All 4th level headings should not be shown by default

## bar
### bar
#### bar
4th level heading should be ignored by default, but is should be always taken
into account, when generating slugs
### \`bar\`
#### \`bar\`
## bar
### bar
#### bar
## bar
"
`;

exports[`insertTOC AUTOGENERATED_TABLE_OF_CONTENTS exists 1`] = `
"
## Commands

  - [\`pokemon-run\`](#pokemon-run)
  - [\`pokemon-fight\`](#pokemon-fight)
  - [\`pokemon-bag\`](#pokemon-bag)
  - [\`pokemon-rename\`](#pokemon-rename)

---

## Reference

### \`pokemon-run\`

Alias: \`run\`.

### \`pokemon-fight\`

Alias: \`fight\`

### \`pokemon-bag\`

Alias: \`bag\`

### \`pokemon-rename\`

Alias: \`rename\`"
`;
